# binah

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/binah-core/: Cargo.toml
crates/binah-core/src/: lib.rs
crates/binah-core/src/cpu/: mod.rs
crates/binah-core/src/graph/: execute.rs  inner.rs  mod.rs  tensor.rs
crates/binah-core/src/op/: binary.rs  mod.rs
crates/binah-core/src/tensor/: mod.rs  shape.rs  storage.rs
examples/: broadcast_test.rs  simple_add.rs
